--- a/bio.html
+++ b/bio.html
@@ -8,6 +8,7 @@
 
         </Style>
     </head>
+    <h1>BIOGRAPHY</h1>
         <header>
             <nav>
                 <a href = "index.html">Home</a>
