--- a/bio.html
+++ b/bio.html
@@ -14,3 +14,10 @@
                 <a href = "index.html">Home</a>
             </nav>
         </header>
+    <body>
+        <p>
+            Hi! My name is Reason Henry, but I go by Rease. I am currently a sophomore student at the Georgia Institute of Technology.
+        </p>
+    </body>
+
+</html>
