--- a/bio.html
+++ b/bio.html
@@ -5,18 +5,34 @@
         <meta charset = "utf-8">
         <title>BIO</title>
         <Style>
-
+            body {
+                background-color: darkgray;
+            }
+            h1 {
+                color: skyblue;
+                text-align: center;
+                font-style: italic;
+                font-size: 35px;
+            }
+            p{
+                text-align: center;
+            }
+            header {
+                text-align: center;
+                
+            }
         </Style>
     </head>
     <h1>BIOGRAPHY</h1>
         <header>
             <nav>
                 <a href = "index.html">Home</a>
+                <a href = "socialmedia.html">Social Media</a>
             </nav>
         </header>
     <body>
         <p>
-            Hi! My name is Reason Henry, but I go by Rease. I am currently a sophomore student at the Georgia Institute of Technology.
+            Hi! My name is Reason Henry, but I go by Rease. I am currently a sophomore student at the Georgia Institute of Technology. I went to high school at McIntosh High School in Peachtree City, GA, where I am originally from.
         </p>
     </body>
 
